After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744589 - nautilus bookmarks changing places randomly
nautilus bookmarks changing places randomly
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 770896 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-02-16 12:11 UTC by Jonas
Modified: 2017-08-31 16:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
places sidebar: compare bookmarks by index (1.44 KB, patch)
2015-03-04 20:25 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Jonas 2015-02-16 12:11:41 UTC
Every time on when opening nautilus bookmarks seems to reaorder randomly, they move up or down in the list.
Comment 1 Carlos Soriano 2015-02-25 16:11:40 UTC
can you try with master or 3.15.90? I think it was a bug on GTK+ already fixed
Comment 2 Carlos Soriano 2015-03-03 09:25:06 UTC
It's not fixed, I have seen some random visual glitches changing the ordering very quick every few seconds.
Comment 3 Cosimo Cecchi 2015-03-03 18:07:45 UTC
-> gtk+

In that case, this is probably a bug in GtkPlacesSidebar. Do you have a set of steps to reproduce it?
Comment 4 Carlos Soriano 2015-03-03 18:17:25 UTC
(In reply to Cosimo Cecchi from comment #3)
> -> gtk+
> 
> In that case, this is probably a bug in GtkPlacesSidebar. Do you have a set
> of steps to reproduce it?

I didn't changed the product because we have a sidebar product in nautilus. Probably is time to remove it from nautilus then =)

No, I don't have a reproducer. It needs investigation in the code of ordering of the bookmarks to catch what changes every few seconds.

But since we will have a student working on GtkPlacesSidebar this gsoc I'm trying to let this kind of bugs to the student to get used to the code.
Comment 5 Matthias Clasen 2015-03-03 18:43:11 UTC
I've fixed at least one ordering bug in the places sidebar code semi-recently.
Comment 6 Carlos Soriano 2015-03-04 13:43:43 UTC
(In reply to Matthias Clasen from comment #5)
> I've fixed at least one ordering bug in the places sidebar code
> semi-recently.

It is what I though was "the fix" in comment 2, but it's actually still happening.
Comment 7 Matthias Clasen 2015-03-04 15:05:53 UTC
in that case, new debugging is needed
Comment 8 Georges Basile Stavracas Neto 2015-03-04 20:25:31 UTC
Created attachment 298580 [details] [review]
places sidebar: compare bookmarks by index

GtkPlacesSidebar applies a sorting function on
the tree model that does not consider the case
of bookmarks, which are sorted by their indexes.

By adding the bookmarks corner case and comparing
then by their indexes, GtkPlacesSidebar can sort
the bookmarks properly in the order they're saved.
Comment 9 Matthias Clasen 2015-03-04 20:31:48 UTC
Review of attachment 298580 [details] [review]:

Looks fine to me, thanks
Comment 10 Georges Basile Stavracas Neto 2015-03-04 20:41:52 UTC
Attachment 298580 [details] pushed as ce9a5a3 - places sidebar: compare bookmarks by index
Comment 11 António Fernandes 2017-08-31 16:25:17 UTC
*** Bug 770896 has been marked as a duplicate of this bug. ***